--- a/index.html
+++ b/index.html
@@ -5,6 +5,184 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links_list">
+          <li class="header__links_list_item header__link_active">
+            <a class="link" href="#0">главная</a>
+          </li>
+          <li class="header__links_list_item">
+            <a class="link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links_list_item">
+            <a class="link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo_image"
+          src="./images/logo-black.svg"
+          alt="Черный логотип"
+        />
+      </a>
+      <address class="address header__address_info">
+        <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        наб. Принсенграхт 263- 265, Амстердам
+      </address>
+    </header>
+    <main class="main">
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="accent_span">оНО</span>
+          <span class="accent_span text_center">ТЕБЕ</span>
+          <span class="accent_span text_right">НАДО</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__subline">
+            Аукцион вещей, <span class="cover__subline_span">в</span>которые
+            никто не верил
+          </p>
+          <button class="cover__button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__title">Лоты</h2>
+        <ul class="lots_card_list">
+          <li class="lots__card_list_item">
+            <a class="card_link" href="">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card_title card_link">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card_text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a class="card_link" href="">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card_title link">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card_text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a class="card_link" href="">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card_title link">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card_text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look_more_link link" href="#">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__logo">
+          <img
+            class="about__logo_image"
+            src=".//images/logo-white.svg"
+            alt="Логотип Оно тебе надо"
+          />
+        </div>
+        <div class="about__collumn">
+          <h4 class="about__collumn_title">Об аукционе</h4>
+          <div class="about__collumn_text">
+            <p class="about__text">
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда
+              в&nbsp;эти вещи не верил никто, продолжали верить
+              их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address footer__address_info">
+        <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        наб. Принсенграхт 263- 265, Амстердам
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__links_list">
+          <li class="footer__links_list_item footer__link_active">
+            <a class="link" href="#0">главная</a>
+          </li>
+          <li class="footer__links_list_item">
+            <a class="link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__links_list_item">
+            <a class="link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social_list">
+        <li class="footer__social_list_item">
+          <a class="footer__social_link" href="">
+            <img class="footer__social_icon" src="./images/yt.svg" alt="Ютуб" />
+          </a>
+        </li>
+        <li class="footer__social_list_item">
+          <a class="footer__social_link" href="">
+            <img
+              class="footer__social_icon"
+              src="./images/vk.svg"
+              alt="Вконтакте"
+            />
+          </a>
+        </li>
+        <li class="footer__social_list_item">
+          <a class="footer__social_link" href="">
+            <img
+              class="footer__social_icon"
+              src="./images/pinterest.svg"
+              alt="Пинтерест"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
