вторая версия проекта после ревью

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links_list">
-          <li class="header__links_list_item header__link_active">
-            <a class="link" href="#0">главная</a>
+          <li class="header__links_list_item header__links_list_item_no_bullit">
+            <a class="link header__link_active" href="#0">главная</a>
           </li>
           <li class="header__links_list_item">
             <a class="link" href="#0">посмотреть лоты</a>
@@ -41,9 +41,9 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="accent_span">оНО</span>
-          <span class="accent_span text_center">ТЕБЕ</span>
-          <span class="accent_span text_right">НАДО</span>
+          <span class="accent_span">оно</span>
+          <span class="accent_span text_center">тебе</span>
+          <span class="accent_span text_right">надо</span>
         </h1>
         <div class="cover__description">
           <p class="cover__subline">
@@ -71,7 +71,7 @@
               </article>
             </a>
           </li>
-          <li>
+          <li class="lots__card_list_item">
             <a class="card_link" href="">
               <article class="card card_type_book">
                 <div class="overlay"></div>
@@ -89,7 +89,7 @@
               </article>
             </a>
           </li>
-          <li>
+          <li class="lots__card_list_item">
             <a class="card_link" href="">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
@@ -116,8 +116,8 @@
             alt="Логотип Оно тебе надо"
           />
         </div>
-        <div class="about__collumn">
-          <h4 class="about__collumn_title">Об аукционе</h4>
+        <article class="about__collumn">
+          <h2 class="about__collumn_title">Об аукционе</h2>
           <div class="about__collumn_text">
             <p class="about__text">
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -136,7 +136,7 @@
               их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.
             </p>
           </div>
-        </div>
+        </article>
       </section>
     </main>
     <footer class="footer">
@@ -147,8 +147,8 @@
       </address>
       <nav class="footer__menu">
         <ul class="footer__links_list">
-          <li class="footer__links_list_item footer__link_active">
-            <a class="link" href="#0">главная</a>
+          <li class="footer__links_list_item">
+            <a class="link footer__link_active" href="#0">главная</a>
           </li>
           <li class="footer__links_list_item">
             <a class="link" href="#0">посмотреть лоты</a>
@@ -160,12 +160,12 @@
       </nav>
       <ul class="footer__social_list">
         <li class="footer__social_list_item">
-          <a class="footer__social_link" href="">
+          <a class="footer__social_link" href="" target="_blank">
             <img class="footer__social_icon" src="./images/yt.svg" alt="Ютуб" />
           </a>
         </li>
         <li class="footer__social_list_item">
-          <a class="footer__social_link" href="">
+          <a class="footer__social_link" href="" target="_blank">
             <img
               class="footer__social_icon"
               src="./images/vk.svg"
@@ -174,7 +174,7 @@
           </a>
         </li>
         <li class="footer__social_list_item">
-          <a class="footer__social_link" href="">
+          <a class="footer__social_link" href="" target="_blank">
             <img
               class="footer__social_icon"
               src="./images/pinterest.svg"
